# splitt_happens

./: README.md  analysis_options.yaml  claude_code_receipt_splitter_prompt.md  pubspec.yaml
android/app/: build.gradle.kts  proguard-rules.pro
backend/: .env.example  .gitignore  README.md  docker-compose.yml
backend/app/: Dockerfile  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0001_create_devices.py
backend/app/app/: config.py  db.py  device_service.py  errors.py  litellm_client.py  main.py  models.py  schemas.py  security.py
backend/app/app/routers/: admin.py  auth.py  proxy.py
backend/app/app/templates/: base.html  login.html  user_detail.html  users.html
backend/app/tests/: conftest.py  test_backend.py
backend/litellm/: config.yaml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/: constants.dart  exceptions.dart  money.dart
lib/database/: app_database.dart  app_database.g.dart
lib/models/: bill.dart  bill.freezed.dart  bill.g.dart  receipt_parse_result.dart  receipt_parse_result.freezed.dart  receipt_parse_result.g.dart
lib/providers/: bill_provider.dart  bill_provider.g.dart  ocr_provider.dart  ocr_provider.g.dart  settings_provider.dart  settings_provider.g.dart
lib/services/: backend_client.dart  image_preprocessor.dart  ocr_service.dart  receipt_parser_service.dart  settlement_calculator.dart  (+1 more)
linux/: CMakeLists.txt
test/: settlement_calculator_test.dart  split_calculator_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+33 files in other folders)
